# django-sfibase

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
sfi_base/: base_settings.py  views.py
sfi_base/static/css/: base.css
sfi_base/templates/sfi_base/: base.html
