[metadata]
name = django-sfibase
version = 1.0
description = Common base for all SFI projects based on Django.
long_description = file: README.rst
url = https://www.sfi.pl/
author = Mateusz Maćkowski
author_email = mateusz@mackowski.org
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
  django>=3.0,<4
  mozilla-django-oidc>=1.2,<2
